@@ -2,6 +2,10 @@
 Changes with Apache 2.3.0
   [Remove entries to the current 2.0 and 2.2 section below, when backported]
 
+  *) mod_cache: Add CacheMinExpire directive to set the minimum time in
+     seconds to cache a document.
+     [Brian Akins <brian.akins turner.com>, Ruediger Pluem]
+
   *) mod_cache: Make caching of reverse proxies possible again. PR 38017.
      [Ruediger Pluem]
 
